src/style/Footer.css
.footer {
  font-size: medium;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 500px;
  align-items: center;
  margin-top: 20px;
  position: absolute;
  bottom: -230px;
  width: 100vw;
}
.common {
  padding-top: 5px;
  padding-bottom: 10px;
  border-radius: 4px;
  width: 45em;
}

.common::placeholder {
  opacity: 1;
}

.contactUsForm {
  position: absolute;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.titles {
  font-size: large;
  margin: 0;
  padding: 0;
}

.listing {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  width: 260px;
  justify-content: space-around;
}

.logos-box {
  display: flex;
  text-align: center;
  align-items: center;
}

.listing2 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.listing .logos2 {
  font-size: 2rem;
  cursor: pointer;
}

.ReservedRights {
  font-size: 0.8rem;
  margin: 0;
  padding: 0;
  position: relative;
  top: 80px;
}
.Cont_SocialMedia_foot {
  display: flex;
  justify-content: space-between;
  width: 85%;
  position: relative;
  top: 180px;
}

.contactUsForm {
  height: 230px;
  width: 100%;
  position: absolute;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  padding-left: 8em;
}

.contactus-message {
  width: 40%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

.para {
  display: flex;
  justify-content: center;
}
.contactus-message p {
  width: min(45%, 300px);
  margin: 0em;
  text-align: center;
}
.shopByCate {
  display: inline-block;
  height: 10px;
}

.titleCat {
  font-size: 1rem;
}

.titles {
  font-size: large;
  font-weight: bold;
}

.listing2 li {
  font-size: large;
}

.titleCat {
  font-size: x-large;
}

.weWillContact {
  font-size: 2.5em;
  line-height: 1.3em;
  margin-bottom: 0.3em;
}

